--- a/index.html
+++ b/index.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto X-Men</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./src/css/reset.css">
+    <link rel="stylesheet" href="./src/css/estilos.css">
+    <link rel="stylesheet" href="./src/css/responsivo.css">
 </head>
+
 <body>
     <header class="cabecalho">
-        <img src="./src/imagens/logo.svg" alt="Logo X-Men">
+        <img clas="logo" src="./src/imagens/logo.svg" alt="Logo X-Men">
     </header>
 
     <main class="selecao-de-personagens">
         <section class="personagens">
             <h1 class="titulo"> Selecione um personagem </h1>
             <ul class="lista-de-personagens">
-                <li class="personagem" id="ciclope">
+                <li class="personagem selecionado" id="ciclope">
                     <img src="./src/imagens/card-ciclope.jpg" alt="Personagem Ciclope">
                 </li>
                 <li class="personagem" id="jean-grey">
@@ -45,13 +50,15 @@
         </section>
         <section class="personagem-selecionado">
             <img class="personagem-grande" src="./src/imagens/card-ciclope.png" alt="Personagem Selecionado">
-            
+
             <div class="informacoes-personagem">
                 <h2 class="nome-personagem" id="nome-personagem">Ciclope</h2>
-                <p class="descricao-personagem" id="descricao-personagem">Ele tem o poder de disparar rajadas ópticas por um acidente que aconteceu com ele quando criança, mas não consegue controlá-los
+                <p class="descricao-personagem" id="descricao-personagem">Ele tem o poder de disparar rajadas ópticas
+                    por um acidente que aconteceu com ele quando criança, mas não consegue controlá-los
                 </p>
             </div>
         </section>
     </main>
 </body>
+
 </html>
