--- a/index.html
+++ b/index.html
@@ -23,28 +23,28 @@
             <h1 class="titulo"> Selecione um personagem </h1>
             <ul class="lista-de-personagens">
                 <li class="personagem selecionado" id="ciclope">
-                    <img src="./src/imagens/card-ciclope.jpg" alt="Personagem Ciclope">
+                    <img src="./src/imagens/card-ciclope.jpg" alt="Personagem Ciclope" data-name="Ciclope">
                 </li>
                 <li class="personagem" id="jean-grey">
-                    <img src="./src/imagens/card-jean-grey.jpg" alt="Personagem Jean Grey">
+                    <img src="./src/imagens/card-jean-grey.jpg" alt="Personagem Jean Grey" data-name="Jean Grey">
                 </li>
                 <li class="personagem" id="lince-negra">
-                    <img src="./src/imagens/card-lince-negra.jpg" alt="Personagem Lince Negra">
+                    <img src="./src/imagens/card-lince-negra.jpg" alt="Personagem Lince Negra" data-name="Lince Negra">
                 </li>
                 <li class="personagem" id="tempestade">
-                    <img src="./src/imagens/card-tempestade.jpg" alt="Personagem Tempestade">
+                    <img src="./src/imagens/card-tempestade.jpg" alt="Personagem Tempestade" data-name="Tempestade">
                 </li>
                 <li class="personagem" id="vampira">
-                    <img src="./src/imagens/card-vampira.jpg" alt="Personagem Vampira">
+                    <img src="./src/imagens/card-vampira.jpg" alt="Personagem Vampira" data-name="Vampira">
                 </li>
-                <li class="personagem" id="wolwerine">
-                    <img src="./src/imagens/card-wolverine.jpg" alt="Personagem Wolwerine">
+                <li class="personagem" id="wolverine">
+                    <img src="./src/imagens/card-wolverine.jpg" alt="Personagem Wolverine" data-name="Wolverine">
                 </li>
                 <li class="personagem" id="noturno">
-                    <img src="./src/imagens/card-noturno.jpg" alt="Personagem Noturno">
+                    <img src="./src/imagens/card-noturno.jpg" alt="Personagem Noturno" data-name="Noturno">
                 </li>
                 <li class="personagem" id="magneto">
-                    <img src="./src/imagens/card-magneto.jpg" alt="Personagem Magneto">
+                    <img src="./src/imagens/card-magneto.jpg" alt="Personagem Magneto" data-name="Magneto">
                 </li>
             </ul>
         </section>
@@ -59,6 +59,7 @@
             </div>
         </section>
     </main>
+    <script src="./src/js/index.js"></script>
 </body>
 
 </html>
